corrected TF visibility

--- a/styles/main.css
+++ b/styles/main.css
@@ -174,6 +174,7 @@ html body {
 .showcampaign.Hob .Hob,
 .showcampaign.LotW .LotW,
 .showcampaign.LoR .LoR,
+.showcampaign.TF .TF,
 .showcampaign.SoN .SoN,
 .showcampaign.MoR .MoR,
 .showcampaign.MoB .MoB,
